Release 2.7.5

New features:
- updated Slovenian translation and fixed Makefile
- RFE #573 - Soprano clef added
- RFE #730 - Direct MIDI import - one-click MIDI file import implemented
- RFE #729 - warning message before TSE3 -> Score added
- automatic bar placement disabled if no time signature defined
- allow bar placement in empty staffs with no clef/key/time signature

Bugs fixed:
- 003914 crash when a pasting to new staff
- 003504 bad file save without clef
- 003861 Multirests in non-4/4 measure broken
- 003862 measures after multirests not numbered correctly
- 003183 multistaff broken - warning message added
- 003403 export lilypond 2.4 lyrics problem
- 003484 crash on midi import
- 003503 hard crash on midi export
- 003786 midi export crashes noteedit
- 003791 staff->delete / import recording warnings wrong
- Integrated patch 403: Better menu structure
- Fixed typo in staff properties dialog ("Voice:" -> "Instrument:")

Remarks:
- export to lily of different drum notes inside a chord is
         suppressed to prevent chocking of lily. The
         user should use multiple voices instead.


Release 2.7.4

New features:
- improved LilyPond support : added export in lilypond-2.4.2 format
- added Slovenian translation, thanks to Matevz Jekovec

Patches included (Matevz Jekovec):
- 000255 added \version "2.0", so convert-ly now works out of the box
         moved \voiceOne,\voiceTwo etc. to the separate lines
  fixed a small typo (LilyPoint -> LilyPond)

Bugs fixed:
- 002487 noteedit doesn't consider ties on MusicXML import
- 002528 triplets unfunctional
- 002532 multirests with one bar
- 002580 small type in INSTALL.de
- 002581 rest symbol printed twice
- 002807 rests should have fermatas as well
- 002809 measure numbers for other voices not printed in .ly file
- 003249 2.7.4 beta crash on RH7.2
- 003296 crash when ALSA synth not running